objects/VaultPLTest__c.object
<CustomObject>
    <fields>
        <fullName>ANField__c</fullName>
        <label>ANField</label>
        <type>AutoNumber</type>
    </fields>
    <fields>
        <fullName>PLField__c</fullName>
        <label>PLField</label>
        <picklist>
            <picklistValues>
                <fullName>a</fullName>
                <default>true</default>
            </picklistValues>
            <picklistValues>
                <fullName>b</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>c</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>d</fullName>
            </picklistValues>
            <restrictedPicklist>true</restrictedPicklist>
        </picklist>
        <required>true</required>
        <type>Picklist</type>
    </fields>
    <fields>
        <fullName>TextField__c</fullName>
        <label>TextField</label>
        <length>100</length>
        <type>Text</type>
    </fields>
    <label>VaultPLTest</label>
    <listViews>
        <fullName>All</fullName>
        <filterScope>Everything</filterScope>
        <label>All</label>
    </listViews>
    <nameField>
        <label>VaultPLTest Name</label>
        <type>Text</type>
    </nameField>
    <pluralLabel>VaultPLTests</pluralLabel>
    <sharingModel>ReadWrite</sharingModel>
</CustomObject>